Fixed CSS issues on iPhones

--- a/web/assets/css/partials/_header.scss
+++ b/web/assets/css/partials/_header.scss
@@ -99,6 +99,11 @@ body {
                             &:hover {
                                 color: $Black;
                             }
+
+                            @include respond-to(phones) {
+                                padding-left: 5px;
+                                padding-right: 5px;
+                            }
                         }
 
                         &.active {
